fix bleeding with sticky

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -144,7 +144,7 @@ article h3,
 article h4,
 article h5 {
 	position: sticky;
-	top: 0;
+	top: -1px;
 	z-index: 1;
 	background: #0d1117;
 	padding-bottom: 10px;
